# libvinyl

./: .gitignore  AGENTS.md  README.md  TODO.md  pyproject.toml
.agents/skills/analyzing-wav-audio/: SKILL.md
.agents/skills/debugging-split-results/: SKILL.md
.agents/skills/splitting-vinyl-tracks/: SKILL.md
src/libvinyl/: audio.py  cli.py  convert.py  musicbrainz.py  state.py  ui.py  visualise.py
src/tp7_org/: audio.py  cli.py  musicbrainz.py  ui.py
