[project]
name = "tp7-org"
version = "0.1.0"
description = "Library organiser for Teenage Engineering TP-7 vinyl recordings"
readme = "README.md"
authors = [
    { name = "Nicholas Robinson-Wall", email = "nick@robinson-wall.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pydub>=0.25",
    "scipy>=1.12",
    "numpy>=1.26",
    "musicbrainzngs>=0.7",
    "mutagen>=1.47",
    "pyyaml>=6.0",
]

[project.scripts]
tp7-org = "tp7_org.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
